@@ -1,30 +1,4 @@
-from zope.deprecation import deprecated
-
-from pyramid.threadlocal import get_current_registry
 from pyramid.compat import string_types
-
-def get_settings():
-    """
-    Return a :term:`deployment settings` object for the current application.
-    The object is a dictionary-like object that contains key/value pairs
-    based on the dictionary passed as the ``settings`` argument to the
-    :class:`pyramid.config.Configurator` constructor or the
-    :func:`pyramid.router.make_app` API.
-
-    .. warning:: This method is deprecated as of Pyramid 1.0.  Use
-       ``pyramid.threadlocal.get_current_registry().settings`` instead or use
-       the ``settings`` attribute of the registry available from the request
-       (``request.registry.settings``).
-    """
-    reg = get_current_registry()
-    return reg.settings
-
-deprecated(
-    'get_settings',
-    '(pyramid.settings.get_settings is deprecated as of Pyramid 1.0.  Use'
-    '``pyramid.threadlocal.get_current_registry().settings`` instead or use '
-    'the ``settings`` attribute of the registry available from the request '
-    '(``request.registry.settings``)).')
 
 truthy = frozenset(('t', 'true', 'y', 'yes', 'on', '1'))
 
